Separated home page collapsible headings and buttons to solve spacing issue on mobiles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,10 +17,9 @@ nav ul a {
   }
 
   .btn-small {
-      margin: 5px;
+    margin: 5px
   }
 
-  .collapsible-header .col strong {
-      margin: 5px;
-      line-height: 40px;
-  }
+  
+
+  
